--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,11 @@
     "name": "duncan3dc/github",
     "description": "A library to interact with the GitHub API",
     "require": {
+        "guzzlehttp/guzzle": "^6.3",
+        "guzzlehttp/psr7": "^1.4",
+        "lcobucci/jwt": "^3.2.2",
+        "psr/http-message": "^1.0",
+        "ext-json": "*",
         "php": "^7.1"
     },
     "require-dev": {
