Use phpcs to ensure we are following the PSR coding standards

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ script:
   - vendor/bin/phpunit
   - vendor/bin/composer-require-checker
   - vendor/bin/phpstan analyse --level=max src
+  - vendor/bin/phpcs
 
 jobs:
   include:
