--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "maglnet/composer-require-checker": "^1.0",
         "mockery/mockery": "^1.1",
         "phpstan/phpstan": "^0.10",
+        "squizlabs/php_codesniffer": "^3.3",
         "phpunit/phpunit": "^7.2"
     },
     "autoload": {
