Improve test quality using static analysis

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ script:
   - vendor/bin/phpunit
   - vendor/bin/composer-require-checker
   - vendor/bin/phpstan analyse --level=max src
+  - vendor/bin/phpstan analyse --level=max --configuration=phpstan-tests.neon tests
   - vendor/bin/phpcs
 
 jobs:
