--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,8 @@
         "maglnet/composer-require-checker": "^1.0",
         "mockery/mockery": "^1.1",
         "phpstan/phpstan": "^0.10",
+        "phpstan/phpstan-mockery": "^0.10.2",
+        "phpstan/phpstan-phpunit": "^0.10.0",
         "squizlabs/php_codesniffer": "^3.3",
         "phpunit/phpunit": "^7.2"
     },
