--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,16 @@
 {
     "name": "duncan3dc/github",
+    "type": "library",
     "description": "A library to interact with the GitHub API",
+    "keywords": ["github", "api"],
+    "homepage": "https://github.com/duncan3dc/github",
+    "license": "Apache-2.0",
+    "authors": [{
+        "name": "Craig Duncan",
+        "email": "git@duncanc.co.uk",
+        "homepage": "https://github.com/duncan3dc",
+        "role": "Developer"
+    }],
     "require": {
         "guzzlehttp/guzzle": "^6.3",
         "guzzlehttp/psr7": "^1.4",
