Create a composer alias for running the test suite

--- a/composer.json
+++ b/composer.json
@@ -34,5 +34,14 @@
     },
     "autoload-dev": {
         "psr-4": {"duncan3dc\\GitHubTests\\": "tests/"}
+    },
+    "scripts": {
+        "test": [
+            "vendor/bin/phpunit",
+            "vendor/bin/composer-require-checker",
+            "vendor/bin/phpstan analyse --level=max src",
+            "vendor/bin/phpstan analyse --level=max --configuration=phpstan-tests.neon tests",
+            "vendor/bin/phpcs"
+        ]
     }
 }
