--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "guzzlehttp/psr7": "^1.4",
         "lcobucci/jwt": "^3.2.2",
         "psr/http-message": "^1.0",
+        "psr/simple-cache": "^1.0",
         "ext-json": "*",
         "php": "^7.1"
     },
