--- a/.travis.yml
+++ b/.travis.yml
@@ -21,8 +21,6 @@ install:
 script:
   - vendor/bin/phpunit
   - vendor/bin/composer-require-checker
-  - vendor/bin/phpstan analyse --level=max src
-  - vendor/bin/phpstan analyse --level=max --configuration=phpstan-tests.neon tests
 
 jobs:
   include:
@@ -30,6 +28,11 @@ jobs:
     - stage: coding standards
       script:
         - vendor/bin/phpcs src tests
+
+    - stage: code quality
+      script:
+        - vendor/bin/phpstan analyse --level=max src
+        - vendor/bin/phpstan analyse --level=max --configuration=phpstan-tests.neon tests
 
     - stage: coverage
       script:
