Switch from Travis to GitHub actions

--- a/.github/workflows/buildcheck.yml
+++ b/.github/workflows/buildcheck.yml
@@ -1,5 +1,8 @@
+name: buildcheck
+
 on:
   push:
+  pull_request:
   schedule:
     - cron: 0 10 19 * *
 
@@ -10,9 +13,9 @@ jobs:
       fail-fast: false
       matrix:
         php:
-          - 7.2
-          - 7.3
-          - 7.4
+          - "7.2"
+          - "7.3"
+          - "7.4"
         composer:
           - ""
           - "--prefer-lowest"
