--- a/composer.json
+++ b/composer.json
@@ -18,18 +18,18 @@
         "psr/http-message": "^1.0",
         "psr/simple-cache": "^1.0",
         "ext-json": "*",
-        "php": "^7.2"
+        "php": "^7.2 || ^8.0"
     },
     "require-dev": {
-        "duncan3dc/cache": "^0.6.1",
-        "duncan3dc/object-intruder": "^0.3",
-        "maglnet/composer-require-checker": "^2.0",
-        "mockery/mockery": "^1.2",
+        "duncan3dc/cache": "^0.6.1 || ^1.0",
+        "duncan3dc/object-intruder": "^0.3 || ^1.0",
+        "maglnet/composer-require-checker": "^2.0 || ^3.8",
+        "mockery/mockery": "^1.3.5",
         "phpstan/phpstan": "^0.12.99",
         "phpstan/phpstan-mockery": "^0.12.14",
         "phpstan/phpstan-phpunit": "^0.12.22",
-        "squizlabs/php_codesniffer": "^3.4",
-        "phpunit/phpunit": "^8.2"
+        "squizlabs/php_codesniffer": "^3.7.1",
+        "phpunit/phpunit": "^8.5.29"
     },
     "autoload": {
         "psr-4": {"duncan3dc\\GitHub\\": "src/"}
