--- a/composer.json
+++ b/composer.json
@@ -25,9 +25,9 @@
         "duncan3dc/object-intruder": "^0.3 || ^1.0",
         "maglnet/composer-require-checker": "^2.0 || ^3.8",
         "mockery/mockery": "^1.3.5",
-        "phpstan/phpstan": "^0.12.99",
-        "phpstan/phpstan-mockery": "^0.12.14",
-        "phpstan/phpstan-phpunit": "^0.12.22",
+        "phpstan/phpstan": "^1.0",
+        "phpstan/phpstan-mockery": "^1.1",
+        "phpstan/phpstan-phpunit": "^1.3",
         "squizlabs/php_codesniffer": "^3.7.1",
         "phpunit/phpunit": "^8.5.29"
     },
@@ -41,7 +41,7 @@
         "test": [
             "vendor/bin/phpunit",
             "vendor/bin/composer-require-checker",
-            "vendor/bin/phpstan analyse --level=max src",
+            "vendor/bin/phpstan analyse --level=max --configuration=phpstan-src.neon src",
             "vendor/bin/phpstan analyse --level=max --configuration=phpstan-tests.neon tests",
             "vendor/bin/phpcs"
         ]
