--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "role": "Developer"
     }],
     "require": {
-        "guzzlehttp/guzzle": "^6.3",
+        "guzzlehttp/guzzle": "^6.3 || ^7.0",
         "guzzlehttp/psr7": "^1.4",
         "lcobucci/jwt": "^3.2.2",
         "psr/http-message": "^1.0",
