--- a/composer.json
+++ b/composer.json
@@ -18,12 +18,12 @@
         "psr/http-message": "^1.0",
         "psr/simple-cache": "^1.0",
         "ext-json": "*",
-        "php": "^7.2 || ^8.0"
+        "php": "^8.0"
     },
     "require-dev": {
-        "duncan3dc/cache": "^0.6.1 || ^1.0",
-        "duncan3dc/object-intruder": "^0.3 || ^1.0",
-        "maglnet/composer-require-checker": "^2.0 || ^3.8",
+        "duncan3dc/cache": "^1.0",
+        "duncan3dc/object-intruder": "^1.0",
+        "maglnet/composer-require-checker": "^3.8",
         "mockery/mockery": "^1.3.5",
         "phpstan/phpstan": "^1.0",
         "phpstan/phpstan-mockery": "^1.1",
